<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background"
    tools:context="com.kasct.pnu.massari.infodriver">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/Vehicletype"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/Email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/Numofdrivers"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/VehicleMake"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="329dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/PlateNumber"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/VehicleModel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/VehicleName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="29dp"
        android:text="@string/VehicleNumber"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="146dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="#"
        android:visibility="visible"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="#"
        android:visibility="visible"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="153dp" />

</android.support.constraint.ConstraintLayout>
