<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.kasct.pnu.massari.account">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:entries="@string/Driver"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/HaveAccount"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="495dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="79dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="211dp"
        android:layout_height="38dp"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textPassword"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="289dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Female"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="397dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Male"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="397dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="221dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:background="@color/box"
        android:ems="10"
        android:inputType="numberPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="154dp"
        android:layout_height="39dp"
        android:background="@color/box"
        android:ems="10"
        android:inputType="textPersonName"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="79dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstName"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmPassword"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="327dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="260dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lastName"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="224dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textAlignment="textStart"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:background="@color/box"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserName"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="117dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:background="@color/LightGreen"
        android:text="@string/CreateAccount"
        android:textColor="@color/LightWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="429dp" />


</android.support.constraint.ConstraintLayout>
