<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kasct.pnu.massari.RemindMe"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choiceremind"
        android:textColor="@color/Blue"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="274dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="292dp"
        android:layout_height="54dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="322dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="242dp"
        android:layout_height="59dp"
        android:text="@string/repeat"
        android:textColor="@color/Black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="376dp" />



    <Button
        android:id="@+id/button3"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:background="@color/LightGreen"
        android:text="@android:string/VideoView_error_button"
        android:textColor="@color/LightWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="587dp"
        android:onClick="reminder_notification"/>

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="213dp"
        android:layout_height="116dp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="443dp">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="186dp"
            android:layout_height="63dp"
            android:checked="false"
            android:text="@string/exit"
            android:textColor="@color/Black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="451dp" />


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="188dp"
            android:layout_height="61dp"
            android:checked="false"
            android:text="@string/entry"
            android:textColor="@color/Black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="453dp" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
