<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.kasct.pnu.massari.page1">

    <Button
        android:id="@+id/button_LogIn"
        android:layout_width="166dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/LightGreen"
        android:onClick="button_LogIn"
        android:text="@string/Login"
        android:textColor="@color/LightWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/Button_SignIn"
        android:layout_width="186dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/LightGreen"
        android:onClick="button_SignIn"
        android:text="@string/action_sign_in"
        android:textColor="@color/LightWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:text="@string/Massari"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark1"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="266dp"
        android:layout_height="285dp"
        app:srcCompat="@drawable/cleanlogo"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="77dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="387dp"
        android:layout_height="93dp"
        app:srcCompat="@drawable/appname"
        tools:layout_editor_absoluteY="30dp"
        tools:layout_editor_absoluteX="-13dp" />


</android.support.constraint.ConstraintLayout>
